import os
from typing import Optional

import grpc

# Note: In production, generate from inventory.proto
# For now, using mock client structure


class InventoryServiceClient:
    """gRPC 클라이언트 for Inventory Service"""

    def __init__(self, endpoint: str):
        self.endpoint = endpoint
        self.channel = None
        self.stub = None

    async def connect(self):
        """Connect to Inventory Service"""
        self.channel = grpc.aio.insecure_channel(self.endpoint)
        # self.stub = inventory_pb2_grpc.InventoryServiceStub(self.channel)

    async def close(self):
        """Close gRPC channel"""
        if self.channel:
            await self.channel.close()

    async def reserve_seat(self, event_id: str, seat_number: str, user_id: str) -> dict:
        """좌석 예약 요청"""
        # Mock implementation - replace with actual gRPC call
        # request = inventory_pb2.ReserveSeatRequest(
        #     event_id=event_id,
        #     seat_number=seat_number,
        #     user_id=user_id
        # )
        # response = await self.stub.ReserveSeat(request)

        # Mock response
        return {
            "success": True,
            "reservation_id": f"res_{event_id}_{seat_number}",
            "message": "Seat reserved successfully",
        }

    async def confirm_booking(self, reservation_id: str, user_id: str, payment_id: str) -> dict:
        """예약 확정 요청"""
        # Mock implementation
        return {"success": True, "booking_id": f"booking_{reservation_id}", "message": "Booking confirmed"}

    async def release_seat(self, event_id: str, seat_number: str, user_id: str) -> dict:
        """좌석 해제 요청"""
        # Mock implementation
        return {"success": True, "message": "Seat released"}


# Global client instance
_inventory_client: Optional[InventoryServiceClient] = None


def get_inventory_client() -> InventoryServiceClient:
    """Get Inventory Service gRPC client"""
    global _inventory_client

    if _inventory_client is None:
        endpoint = os.getenv("INVENTORY_SERVICE_GRPC", "inventory-service:50051")
        _inventory_client = InventoryServiceClient(endpoint)

    return _inventory_client
